# faceless_chain

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
pipeline/: pyproject.toml
pipeline/src/: image.py  main.py  video.py  voice.py  voice_en.py
src/: image.py  video.py  voice_en.py
