[project]
name = "faceless-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.7.2",
    "langchain>=1.2.13",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "moviepy>=1.0.3",
    "pillow>=12.1.1",
]
